Fixes #2549: CRF API should support the medical coding & randomization components. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3125 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4101,3 +4101,9 @@ medical_coding_process_message = Medical coding process message
 retrieving_medical_codes = Retrieving medical codes. Please wait...
 please_select_subjects_to_generate_casebooks = Please select at least one subject to start casebooks generation.
 file_path_is_invalid = File Path specified in the System properties is invalid, unable to download rule. Please contact your system administrator.
+
+codeRef.CTCAE.GR.value.1=Mild or Grade 1
+codeRef.CTCAE.GR.value.2=Moderate or Grade 2
+codeRef.CTCAE.GR.value.3=Severe or Grade 3
+codeRef.CTCAE.GR.value.4=Life-threatening or Grade 4
+codeRef.CTCAE.GR.value.5=Fatal or Grade 5
