Fixed #2563: In Import Rules, having a long Message results in an Oops page. Submitted by: tom
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3127 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3852,6 +3852,8 @@ rs.message.selectEvaluate = A rule is supposed to evaluate to true or false. Ple
 rs.message.specifyTarget = Please specify a rule target
 rs.message.specifyDescription = Please specify the rule description
 rs.message.specifyDiscrepancyText = A discrepancy action was selected but no discrepancy text has been specified.
+rs.message.invalidDiscrepancyText = This message cannot be more than 2000 characters in length.
+rs.message.invalidEmailText = This message cannot be more than 2000 characters in length.
 rs.message.specifyEmailMessage = Please provide a valid email message
 rs.message.invalidEmail = The email address is invalid. Check the email and try again.
 rs.message.selectItemsToInsert An insert action was selected but the items to insert values into are not specified.
