Fixed #2579: crf-lib should support "divider" & "labeled table". Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3138 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -628,6 +628,7 @@ rest.crfservice.itemOfOneGroupBelongsToMoreThanOneSection=Items of one repeating
 rest.crfservice.notUniqueItemPlacementInGroups=You have tried to assign the item ''{0}'' to a different item group than was used in previous version(s) of the CRF
 rest.crfservice.checkItem=. Check item ''{0}''
 crfShouldHaveAtLeastOneItem=The CRF should have at least one item.
+crfItemNamesShouldNotStartWith=CRF item names should not start with 'sysdvr_' or 'syslbl_'
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
