--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1382,8 +1382,9 @@ does_not_have_access_for_subject_casebook = Authorised user does not have access
 workbook.blankFound=Blank row found in sheet CRF.
 workbook.isNotValid=The excel spreadsheet doesn't have required valid worksheets. Please check whether it contains sheets of CRF, Sections and Items.
 
+stratificationData=Stratification Data
 strataVariable=Strata Variable
 randomization=Randomization
-dateOfRandomization=Date of Randomization:
-randomizationResult=Randomization Result:
+dateOfRandomization=Date of Randomization
+randomizationResult=Randomization Result
 pleaseSpecifyStratificationData=Please specify stratification data
