Fixed #2598: When CRF is partially saved user should see message. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3155 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4109,3 +4109,5 @@ codeRef.CTCAE.GR.value.2=Moderate or Grade 2
 codeRef.CTCAE.GR.value.3=Severe or Grade 3
 codeRef.CTCAE.GR.value.4=Life-threatening or Grade 4
 codeRef.CTCAE.GR.value.5=Fatal or Grade 5
+
+dataEntry.thisCrfContainsPDForTheFollowingPages=This CRF contains partial data on the following page(s)
