--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -638,3 +638,5 @@ this_date_needs_to_be_later = This date needs to be later than the present time.
 the_study_should_be_selected = The study should be selected.
 at_least_one_of_the_following = At least one of the following should be greater than zero.
 cc_repo_directory_not_found = The directory <i>{0}</i> does not exist on this server. Please contact your System Administrator.
+
+crfForm.checkboxesErrorMsg=Only one checkbox should be selected. Please pick 'Mark CRF Complete' or 'Partial data' but not both.
