Fixes #2601: Disable interviewer Date/Name when PS is enabled. Submitted by: igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3163 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1599,7 +1599,7 @@ parent_note = Parent Note
 
 parent_study = Parent Study
 
-partial_data = Partial data
+partial_data = Partial Data
 
 partial_data_entry = Partial Data Entry
 
