Fixed #2603: If user will enter long text into "Interviewer Name" with "Partial Save" enabled - data will not be saved. Submitted by: igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3166 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2394,6 +2394,12 @@ parent_note  = \u0420\u043e\u0434\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u043
 #parent_study  =  Parent Study
 #parent_study  = Родительское исследование
 parent_study  = \u0420\u043e\u0434\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u043e\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435
+#partial_data = Partial Data
+#partial_data = Частичные Данные
+partial_data = \u0427\u0430\u0441\u0442\u0438\u0447\u043d\u044b\u0435 \u0414\u0430\u043d\u043d\u044b\u0435
+#partial_data_entry = Partial Data Entry
+#partial_data_entry = Частичный Ввод Данных
+partial_data = \u0427\u0430\u0441\u0442\u0438\u0447\u043d\u044b\u0439 \u0412\u0432\u043e\u0434 \u0414\u0430\u043d\u043d\u044b\u0445
 #password  =  Password
 #password  = Пароль
 password  = \u041f\u0430\u0440\u043e\u043b\u044c
