Fixed #2589: Fix import/export partial saved data. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3183 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -639,4 +639,5 @@ the_study_should_be_selected = The study should be selected.
 at_least_one_of_the_following = At least one of the following should be greater than zero.
 cc_repo_directory_not_found = The directory <i>{0}</i> does not exist on this server. Please contact your System Administrator.
 
+dataImport.failed=Your data import failed.
 crfForm.checkboxesErrorMsg=Only one checkbox should be selected. Please pick 'Mark CRF Complete' or 'Partial data' but not both.
