--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1002,7 +1002,7 @@ you_can_access_spss = You can access your SPSS files <a href='AccessFile?fileId=
 
 you_can_access_tab_delimited = You can access your tab-delimited file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 
-you_can_review_the_data = <p>You can review the entered data <a href='{0}ListStudySubjects'>here</a>.
+you_can_review_the_data = <p>You can review the entered data <a href='
 
 you_cannot_create_site_itself_site = You cannot create a site from a study that itself is a site. Please change your active study to a top-level study or contact your sysadmin.
 
@@ -1120,8 +1120,8 @@ unreadable_file=Unreadable File
 your_xml_in_the_file=Your XML in the file {0} was well formed, but generated {1} metadata errors.
 your_listed_crf_in_the_file=Your listed Event CRF in the file {0} does not exist, or has already been locked for import.
 problems_encountered_with_file=Problems encountered with file {0}: {1}<br/>
-you_can_review_the_data_2=/ListStudySubjects'>here</a> and the log messages <a href='
-you_can_review_the_data_3=/ViewLogMessage?n=
+you_can_review_the_data_2=ListStudySubjects'>here</a> and the log messages <a href='
+you_can_review_the_data_3=ViewLogMessage?n=
 you_can_review_the_data_4='>here</a>.
 # 4593
 SHOW_GROUP_column = SHOW_GROUP column
