--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -501,8 +501,8 @@ associated_study_subjects  = \u0421\u0432\u044f\u0437\u0430\u043d\u043d\u044b\u0
 #audit_logs  = Журналы проверки
 audit_logs  = \u0416\u0443\u0440\u043d\u0430\u043b\u044b \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438
 #audit_logins  =  Audit Logins
-#audit_logins  = Контрольный журнал входов в систему
-audit_logins  = \u041a\u043e\u043d\u0442\u0440\u043e\u043b\u044c\u043d\u044b\u0439 \u0436\u0443\u0440\u043d\u0430\u043b \u0432\u0445\u043e\u0434\u043e\u0432 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0443
+#audit_logins  = Журнал авторизации
+audit_logins  = \u0416\u0443\u0440\u043d\u0430\u043b \u0430\u0432\u0442\u043e\u0440\u0438\u0437\u0430\u0446\u0438\u0438
 #audit_exist  =  Audit Log Exists
 #audit_exist  = Журнал проверки существует
 audit_exist  = \u0416\u0443\u0440\u043d\u0430\u043b \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
@@ -594,8 +594,8 @@ change_password  = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u043f\u0430
 #change_study  = Перейти в другой центр/исследование
 change_study  = \u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u0432 \u0434\u0440\u0443\u0433\u043e\u0439 \u0446\u0435\u043d\u0442\u0440\u002f\u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435
 #change_study_site  =  Change Study/Site
-#change_study_site  = Перейти в другой центр/исследование
-change_study_site  = \u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u0432 \u0434\u0440\u0443\u0433\u043e\u0439 \u0446\u0435\u043d\u0442\u0440\u002f\u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435
+#change_study_site  = Другой центр/исследование
+change_study_site  = \u0414\u0440\u0443\u0433\u043e\u0439 \u0446\u0435\u043d\u0442\u0440\u002f\u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435
 #change_user_profile  =  Change User Profile
 #change_user_profile  = Изменить профиль пользователя
 change_user_profile  = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
@@ -2410,8 +2410,8 @@ password_challenge_answer  = \u041e\u0442\u0432\u0435\u0442 \u043d\u0430 \u043a\
 #password_challenge_question  = Контрольный вопрос
 password_challenge_question  = \u041a\u043e\u043d\u0442\u0440\u043e\u043b\u044c\u043d\u044b\u0439 \u0432\u043e\u043f\u0440\u043e\u0441
 #password_policies  =  Password Policies
-#password_policies  = Политика обновления паролей
-password_policies  = \u041f\u043e\u043b\u0438\u0442\u0438\u043a\u0430 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f \u043f\u0430\u0440\u043e\u043b\u0435\u0439
+#password_policies  = Политика безопасности
+password_policies  = \u041f\u043e\u043b\u0438\u0442\u0438\u043a\u0430 \u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u0438
 #percentage  =  Percentage
 #percentage  = Процентное соотношение
 percentage  = \u041f\u0440\u043e\u0446\u0435\u043d\u0442\u043d\u043e\u0435 \u0441\u043e\u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
@@ -4604,8 +4604,8 @@ table_sdv_all = \u041f\u043e\u043a\u0430\u0437\u0430\u043d\u044b \u0432\u0441\u0
 #table_sdv_none = Никакой
 table_sdv_none = \u041d\u0438\u043a\u0430\u043a\u043e\u0439
 #sdv_all_checked =  SDV All Checked
-#sdv_all_checked = Отметить SDVсе выделенных
-sdv_all_checked = \u041e\u0442\u043c\u0435\u0442\u0438\u0442\u044c \u0053\u0044\u0056\u0441\u0435 \u0432\u044b\u0434\u0435\u043b\u0435\u043d\u043d\u044b\u0445
+#sdv_all_checked = SDV все отмеченные
+sdv_all_checked = \u0053\u0044\u0056 \u0432\u0441\u0435 \u043e\u0442\u043c\u0435\u0447\u0435\u043d\u043d\u044b\u0435
 #sdv_sdv_for =  Source Data Verification for
 #sdv_sdv_for = Сверка с первичной документацией для
 sdv_sdv_for = \u0421\u0432\u0435\u0440\u043a\u0430 \u0441 \u043f\u0435\u0440\u0432\u0438\u0447\u043d\u043e\u0439 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430\u0446\u0438\u0435\u0439 \u0434\u043b\u044f
@@ -5393,8 +5393,8 @@ error_message_cannot_update_crf_version = \u041d\u0435\u0432\u043e\u0437\u043c\u
 #create_an_import_job = Создать задание на импорт данных
 create_an_import_job = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u0435 \u043d\u0430 \u0438\u043c\u043f\u043e\u0440\u0442 \u0434\u0430\u043d\u043d\u044b\u0445
 #login_lockout =  Login Lockout
-#login_lockout = Вход заблокирован
-login_lockout = \u0412\u0445\u043e\u0434 \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d
+#login_lockout = Блокировка входа в систему
+login_lockout = \u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430 \u0432\u0445\u043e\u0434\u0430 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0443
 #datasets_for =  Manage Datasets for
 #datasets_for = Управлять наборами данных для
 datasets_for = \u0423\u043f\u0440\u0430\u0432\u043b\u044f\u0442\u044c \u043d\u0430\u0431\u043e\u0440\u0430\u043c\u0438 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f
@@ -5462,20 +5462,20 @@ pwd_reqs_expiration_days_note = \u0028\u041d\u0435 \u043c\u043e\u0436\u0435\u044
 #pwd_reqs_server_restart = (Изменения в этих настройках будут применены после перезагрузки сервера.)
 pwd_reqs_server_restart = \u0028\u0418\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u0432 \u044d\u0442\u0438\u0445 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430\u0445 \u0431\u0443\u0434\u0443\u0442 \u043f\u0440\u0438\u043c\u0435\u043d\u0435\u043d\u044b \u043f\u043e\u0441\u043b\u0435 \u043f\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0438 \u0441\u0435\u0440\u0432\u0435\u0440\u0430\u002e\u0029
 #export_jobs =  Export Jobs
-#export_jobs = Выгрузить задания
-export_jobs = \u0412\u044b\u0433\u0440\u0443\u0437\u0438\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u044f
+#export_jobs = Экспорт данных
+export_jobs = \u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u0434\u0430\u043d\u043d\u044b\u0445
 #import_jobs =  Import Jobs
-#import_jobs = Загрузить задания
-import_jobs = \u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u044f
+#import_jobs = Импорт данных
+import_jobs = \u0418\u043c\u043f\u043e\u0440\u0442 \u0434\u0430\u043d\u043d\u044b\u0445
 #running_jobs =  Running Jobs
 #running_jobs = Выполняемые задания
 running_jobs = \u0412\u044b\u043f\u043e\u043b\u043d\u044f\u0435\u043c\u044b\u0435 \u0437\u0430\u0434\u0430\u043d\u0438\u044f
 #create_export_job =  Create Export Job
-#create_export_job = Создать задание на выгрузку
-create_export_job = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u0435 \u043d\u0430 \u0432\u044b\u0433\u0440\u0443\u0437\u043a\u0443
+#create_export_job = Создать задание
+create_export_job = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u0435
 #create_import_job =  Create Import Job
-#create_import_job = Создать задание на загрузку
-create_import_job = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u0435 \u043d\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0443
+#create_import_job = Создать задание
+create_import_job = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u0435
 #administer_import_jobs =  Administer Import Jobs
 #administer_import_jobs = Администрировать задания на загрузку
 administer_import_jobs = \u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0437\u0430\u0434\u0430\u043d\u0438\u044f \u043d\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0443
