Fixed #2613: Use MimeMessageHelper in the Inactive user analyser code. Submitted by: igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3193 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_zh.properties
@@ -1339,6 +1339,9 @@ widget_enrollment_per_site_hint	 = \u9884\u8ba1\u767b\u8bb0\u4eba\u6570\u767e\u5
 #days	 =   days.\n\n\n\n
 #days	 =   天数.\n\n\n\n
 days	 =   \u5929\u6570\u002e\\n\\n\\n\\n
+#days_   =   days
+#days_	 =   天数
+days_	 =   \u5929\u6570
 #application_could_not_generate_the_markup	 = 	 "The application could not generate the markup for the printable form.<br /> This error may have been caused by the altering of the web page's URL; the URL needs an 'id' or an 'ecId' value in its query strin
 #application_could_not_generate_the_markup	 =  "该应用程序无法生成可打印形式的标记。 <br /> 这个错误可能是由于变换了网页 URL; 这个 URL 需要一个 'id' 或 'ecId'的值在查询语句中
 application_could_not_generate_the_markup	 =  \u0022\u8be5\u5e94\u7528\u7a0b\u5e8f\u65e0\u6cd5\u751f\u6210\u53ef\u6253\u5370\u5f62\u5f0f\u7684\u6807\u8bb0\u3002 <br /> \u8fd9\u4e2a\u9519\u8bef\u53ef\u80fd\u662f\u7531\u4e8e\u53d8\u6362\u4e86\u7f51\u9875 \u
