--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_es_MX.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_es_MX.properties
@@ -1818,7 +1818,7 @@ warning=Advertencia:
 warning_message=Este Elemento de CRF existe dentro de diferentes grupos en versi\u00F3n(es) del CRF eliminada(s):
 
 best_system_administrator = Saludos,<br><br>Administrador del Sistema para {0}
-
+best_system_admin = Saludos,<br><br>Administrador del Sistema
 
 site = Sitio
 study = Estudio
