--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -2130,6 +2130,10 @@ warning_message = \u042d\u0442\u0430 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\
 #best_system_administrator  =  Best,<br><br>System Administrator for {0}
 #best_system_administrator  = С наилучшими пожеланиями,<br><br>Администратор  {0}
 best_system_administrator  = \u0421 \u043d\u0430\u0438\u043b\u0443\u0447\u0448\u0438\u043c\u0438 \u043f\u043e\u0436\u0435\u043b\u0430\u043d\u0438\u044f\u043c\u0438\u002c<br><br>\u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440  {0}
+#best_system_admin  =  Best,<br><br>System Administrator
+#best_system_admin  = С наилучшими пожеланиями,<br><br>Администратор
+best_system_admin  = \u0421 \u043d\u0430\u0438\u043b\u0443\u0447\u0448\u0438\u043c\u0438 \u043f\u043e\u0436\u0435\u043b\u0430\u043d\u0438\u044f\u043c\u0438\u002c<br><br>\u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440
+
 #site  =  Site
 #site  = Центр
 site  = \u0426\u0435\u043d\u0442\u0440
