--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
@@ -2115,6 +2115,10 @@ warning_message = \u8fd9\u4e00\u0043\u0052\u0046\u9879\u76ee\u5728\u8de8\u4e0d\u
 #best_system_administrator  =  Best,<br><br>System Administrator for {0}
 #best_system_administrator  = 此致， <br><br>系统管理员 {0}
 best_system_administrator  = \u6b64\u81f4\uff0c <br><br>\u7cfb\u7edf\u7ba1\u7406\u5458 {0}
+#best_system_admin  =  Best,<br><br>System Administrator
+#best_system_admin  = 此致， <br><br>系统管理员
+best_system_admin  = \u6b64\u81f4\uff0c <br><br>\u7cfb\u7edf\u7ba1\u7406\u5458
+
 #site  =  Site
 #site  = 站点
 site  = \u7ad9\u70b9
