--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_ru.properties
@@ -1373,6 +1373,10 @@ crf_evaluation_instruction = \u041f\u0440\u043e\u0446\u0435\u0441\u0441 \u043e\u
 #days = дни.\n\n\n\n
 days = \u0434\u043d\u0438\u002e\n\n\n\n
 
+#days_ = days
+#days_ = дни
+days_ = \u0434\u043d\u0438
+
 #application_could_not_generate_the_markup = "The application could not generate the markup for the printable form.<br /> This error may have been caused by the altering of the web page's URL; the URL needs an 'id' or an 'ecId' value in its query string at the URL end.
 #application_could_not_generate_the_markup = Приложение не может сгенерировать макет для печати. <br /> Эта ошибка может быть вызвана изменениями в URL адресе страницы. URL должна содержать значения параметров 'id' или 'ecId'.
 application_could_not_generate_the_markup = \u041f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0441\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043c\u0430\u043a\u0435\u0442 \u0434\u043b\u044f \u043f\u0435\u0447\u0430\u0442\u0438\u002e <br /> \u042d\u0442\u0430 \u043e\u0448\u0438\u0431\u043a\u0430 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0432\u044b\u0437\u0432\u0430\u043d\u0430 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f\u043c\u0438 \u0432 \u0055\u0052\u004c \u0430\u0434\u0440\u0435\u0441\u0435 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u044b\u002e \u0055\u0052\u004c \u0434\u043e\u043b\u0436\u043d\u0430 \u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u043e\u0432 \u0027\u0069\u0064\u0027 \u0438\u043b\u0438 \u0027\u0065\u0063\u0049\u0064\u0027\u002e
