Fixed #2200: Update workflow of Event Definition CRFs editing. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3197 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4111,3 +4111,7 @@ codeRef.CTCAE.GR.value.4=Life-threatening or Grade 4
 codeRef.CTCAE.GR.value.5=Fatal or Grade 5
 
 dataEntry.thisCrfContainsPDForTheFollowingPages=This CRF contains partial data on the following page(s)
+
+propagate_change = Propagate change
+yes_unconditionally = Yes, unconditionally
+yes_preserve_different = Yes, but preserve different settings
