--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7820,3 +7820,13 @@ please_select_subjects_to_generate_casebooks = \u041f\u043e\u0436\u0430\u043b\u0
 #file_path_is_invalid = File Path specified in the System properties is invalid, unable to download rule. Please contact your system administrator.
 #file_path_is_invalid = Путь указанный в настройках системы не обнаружен, невозможно скачать правило. Пожалуйста свяжитесь с администратором.
 file_path_is_invalid = \u041f\u0443\u0442\u044c \u0443\u043a\u0430\u0437\u0430\u043d\u043d\u044b\u0439 \u0432 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430\u0445 \u0441\u0438\u0441\u0442\u0435\u043c\u044b \u043d\u0435 \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0435\u043d\u002c \u043d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0441\u043a\u0430\u0447\u0430\u0442\u044c \u043f\u0440\u0430\u0432\u0438\u043b\u043e\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c\u002e
+
+#propagate_change = Propagate change
+#propagate_change = Наследование изменений
+propagate_change = \u041d\u0430\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0439
+#yes_unconditionally = Yes, unconditionally
+#yes_unconditionally = Да, перезаписать все
+yes_unconditionally = \u0414\u0430\u002c \u043f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u044c \u0432\u0441\u0435
+#yes_preserve_different = Yes, but preserve different settings
+#yes_preserve_different = Да, без перезаписи различающихся
+yes_preserve_different = \u0414\u0430\u002c \u0431\u0435\u0437 \u043f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0438 \u0440\u0430\u0437\u043b\u0438\u0447\u0430\u044e\u0449\u0438\u0445\u0441\u044f
