--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4115,3 +4115,11 @@ dataEntry.thisCrfContainsPDForTheFollowingPages=This CRF contains partial data o
 propagate_change = Propagate change
 yes_unconditionally = Yes, unconditionally
 yes_preserve_different = Yes, but preserve different settings
+
+delete_crf_from_definition = Delete CRF from Event Definition.
+data_is_present_for_this_crf = Some data is present fot this CRF. Please delete all data first.
+data_entry_has_been_started_for_this_event_definition_crf = Data Entry has been started into this Event Definition CRF for the following subject:
+this_event_definition_crf_mentioned_in_rules = This Event Definition CRF is mentioned in the following rules:
+confirm_delete_crf_from_definition = Are you sure you want to delete this CRF from event?
+started_event_crf_found = Started event CRF found, unable to delete this Event Definition CRF.
+crf_was_deleted_from_event_definition = CRF {0} has been successfully deleted from event {1}.
