Fixed #2640: Create new CRF status for Partially Saved DDE. Submitted by: igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3230 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1603,6 +1603,8 @@ partial_data = Partial Data
 
 partial_data_entry = Partial Data Entry
 
+partial_double_data_entry = Partial Double Data Entry
+
 password = Password
 
 password_challenge_answer = Password Challenge Answer
