Fixed #2644: Add validation to the filePath parameter in Systems menu. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3233 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3430,7 +3430,9 @@ systemProperty.sysURL.description=This parameter is the web address for ClinCapt
  For example:	http://demo.clincapture.com/clincapture <br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;http://192.168.1.12/clincapture
 
 systemProperty.filePath.label=File Path
-systemProperty.filePath.description=This parameter specifies the location of the repository for all uploaded and generated files in the system, including CRFs and datasets.  \
+systemProperty.filePath.description=This parameter specifies the location of the repository for all uploaded and generated files in the system, including CRFs and datasets. <br/> \
+  <span class="alert root_only">Please note that all files that were created before will not be available if file path will be changed.</span><br/> \
+  <span class="alert root_only">Please note that if folder not exists some functions may not be available.</span><br/> \
   The format depends on your operating system.<br/><br/> \
   For example:<br/><br/> \
   Windows: c:\\\\ClinCapture\\\\Tomcat\\\\ClinCapture.data\\\\<br/> \
@@ -4125,3 +4127,5 @@ this_event_definition_crf_mentioned_in_rules = This Event Definition CRF is ment
 confirm_delete_crf_from_definition = Are you sure you want to delete this CRF from event?
 started_event_crf_found = Started event CRF found, unable to delete this Event Definition CRF.
 crf_was_deleted_from_event_definition = CRF {0} has been successfully deleted from event {1}.
+
+file_path_should_end_with_a_slash = File path should end with a slash.
