--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5979,17 +5979,25 @@ systemProperty.sysURL.description = \u042d\u0442\u043e\u0442 \u043f\u0430\u0440\
 #systemProperty.filePath.label = File Path
 #systemProperty.filePath.label = File Path
 systemProperty.filePath.label = File Path
-#systemProperty.filePath.description = his parameter specifies the location of the repository for all uploaded and generated files in the system, including CRFs and datasets.  \
+#systemProperty.filePath.description = This parameter specifies the location of the repository for all uploaded and generated files in the system, including CRFs and datasets. <br> \
+  #Please note that all files that were created before will not be available if file path will be changed.<br/> \
+  #<span class="alert root_only">Please note that if folder not exists some functions may not be available.</span><br/> \
   #The format depends on your operating system.<br/><br/> \
   #For example:<br/><br/> \
   #Windows: c:\\\\ClinCapture\\\\Tomcat\\\\ClinCapture.data\\\\<br/> \
   #Linux:       /usr/local/tomcat/clincapture.data"
-#systemProperty.filePath.description = Этот параметр определяет местоположение репозитория для всех загружаемых сгенерированных системой файлов, включая ИРК и наборы данных. \ Формат зависит от вашей операционной системы.<br/><br/> \
-#Например:<br/><br/> \
- # Windows: c:\\\\ClinCapture\\\\Tomcat\\\\ClinCapture.data\\\\<br/> \
+#systemProperty.filePath.description = Этот параметр определяет местоположение репозитория для всех загружаемых сгенерированных системой файлов, включая ИРК и наборы данных.<br/> \
+  #<span class="alert root_only">В случае изменения данного параметра все файлы созданные раннее престанут быть доступны.</span><br/>
+  #<span class="alert root_only">Пожалуйста, обратите внимание, что если папка не существует некоторые функции могут быть недоступны.</span><br/> \
+  #Формат зависит от вашей операционной системы.<br/><br/> \
+  #Например:<br/><br/> \
+  # Windows: c:\\\\ClinCapture\\\\Tomcat\\\\ClinCapture.data\\\\<br/> \
   #Linux:       /usr/local/tomcat/clincapture.data"
-systemProperty.filePath.description = \u042d\u0442\u043e\u0442 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440 \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u044f\u0435\u0442 \u043c\u0435\u0441\u0442\u043e\u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u0440\u0435\u043f\u043e\u0437\u0438\u0442\u043e\u0440\u0438\u044f \u0434\u043b\u044f \u0432\u0441\u0435\u0445 \u0437\u0430\u0433\u0440\u0443\u0436\u0430\u0435\u043c\u044b\u0445 \u0441\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0445 \u0441\u0438\u0441\u0442\u0435\u043c\u043e\u0439 \u0444\u0430\u0439\u043b\u043e\u0432\u002c \u0432\u043a\u043b\u044e\u0447\u0430\u044f \u0418\u0420\u041a \u0438 \u043d\u0430\u0431\u043e\u0440\u044b \u0434\u0430\u043d\u043d\u044b\u0445.<br/><br/> \
-\u041d\u0430\u043f\u0440\u0438\u043c\u0435\u0440:<br/><br/> \
+systemProperty.filePath.description = \u042d\u0442\u043e\u0442 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440 \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u044f\u0435\u0442 \u043c\u0435\u0441\u0442\u043e\u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u0440\u0435\u043f\u043e\u0437\u0438\u0442\u043e\u0440\u0438\u044f \u0434\u043b\u044f \u0432\u0441\u0435\u0445 \u0437\u0430\u0433\u0440\u0443\u0436\u0430\u0435\u043c\u044b\u0445 \u0441\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0445 \u0441\u0438\u0441\u0442\u0435\u043c\u043e\u0439 \u0444\u0430\u0439\u043b\u043e\u0432\u002c \u0432\u043a\u043b\u044e\u0447\u0430\u044f \u0418\u0420\u041a \u0438 \u043d\u0430\u0431\u043e\u0440\u044b \u0434\u0430\u043d\u043d\u044b\u0445\u002e <br/>\
+  <span class="alert root_only">\u0412 \u0441\u043b\u0443\u0447\u0430\u0435 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u0434\u0430\u043d\u043d\u043e\u0433\u043e \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0430 \u0432\u0441\u0435 \u0444\u0430\u0439\u043b\u044b \u0441\u043e\u0437\u0434\u0430\u043d\u043d\u044b\u0435 \u0440\u0430\u043d\u043d\u0435\u0435 \u043f\u0440\u0435\u0441\u0442\u0430\u043d\u0443\u0442 \u0431\u044b\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u002e</span><br/> \
+  <span class="alert root_only">\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u043e\u0431\u0440\u0430\u0442\u0438\u0442\u0435 \u0432\u043d\u0438\u043c\u0430\u043d\u0438\u0435\u002c \u0447\u0442\u043e \u0435\u0441\u043b\u0438 \u043f\u0430\u043f\u043a\u0430 \u043d\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442 \u043d\u0435\u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u0444\u0443\u043d\u043a\u0446\u0438\u0438 \u043c\u043e\u0433\u0443\u0442 \u0431\u044b\u0442\u044c \u043d\u0435\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u002e</span><br/> \
+  \u0424\u043e\u0440\u043c\u0430\u0442 \u0437\u0430\u0432\u0438\u0441\u0438\u0442 \u043e\u0442 \u0432\u0430\u0448\u0435\u0439 \u043e\u043f\u0435\u0440\u0430\u0446\u0438\u043e\u043d\u043d\u043e\u0439 \u0441\u0438\u0441\u0442\u0435\u043c\u044b\u002e <br/><br/> \
+  \u041d\u0430\u043f\u0440\u0438\u043c\u0435\u0440\u003a <br/><br/> \
   Windows c:\\\\ClinCapture\\\\Tomcat\\\\ClinCapture.data\\\\<br/> \
   Linux       /usr/local/tomcat/clincapture.data"
 #systemProperty.attached_file_location.label = Uploaded file path
