Fixed #1800: Event API: Edit Study CRF_Event. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3259 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -528,15 +528,22 @@ rest.event.addCrf.crfVersionIsNotAvailable=Crf version is not available
 rest.event.isNotFound=Study Event Definition with id ''{0}'' is not found
 rest.event.cannotPerformOperationOnEDCBecauseTheSEDIsNotAvailable=Cannot perform operation on Event Definition Crf because the Study Event Definition is not available
 rest.event.studyEventDefinitionDoesNotBelongToCurrentScope=Study Event Definition with id ''{0}'' does not belong to current scope
-rest.event.eventDefinitionCrfAlreadyExists=Event Definition Crf for Crf with id ''{0}'' already exists in study event definition with id ''{1}''
+rest.event.eventDefinitionCrfAlreadyExists=Event Definition Crf for Crf ''{0}'' already exists in study event definition ''{1}''
 rest.event.crfHasSDVRequiredItems=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
 rest.event.emailAddressIsNotValid=Email address is not valid.
+rest.event.provideEmailAddress=Please provide email address.
 rest.eventservice.addcrf.empty.defaultversion=DefaultVersion parameter is empty
 rest.eventservice.addcrf.missing.defaultversion=DefaultVersion parameter is missing
 rest.eventservice.addcrf.empty.crfname=CrfName parameter is empty
 rest.eventservice.addcrf.missing.crfname=CrfName parameter is missing
 rest.eventservice.addcrf.empty.eventid=EventId parameter is empty
 rest.eventservice.addcrf.missing.eventid=EventId parameter is missing
+rest.eventservice.editstudycrf.empty.crfname=CrfName parameter is empty
+rest.eventservice.editstudycrf.missing.crfname=CrfName parameter is missing
+rest.eventservice.editstudycrf.empty.eventid=EventId parameter is empty
+rest.eventservice.editstudycrf.missing.eventid=EventId parameter is missing
+rest.eventservice.editstudycrf.eventDefinitionCrfIsNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''
+rest.eventservice.editstudycrf.emailCanBeSpecifiedOnlyIf=Email can be specified only if parameter emailwhen is set to 'complete' or 'sign'.
 rest.createEvent.operationFailed=Failed to create Study Event Definition
 rest.addCrf.operationFailed=Failed to add Event Definition Crf
 rest.eventservice.editevent.empty.id=Id parameter is empty
@@ -556,7 +563,7 @@ rest.eventservice.restorecrf.missing.eventid=Event Id parameter is missing
 rest.eventservice.restorecrf.empty.eventid=Event Id parameter is empty
 rest.eventservice.restorecrf.missing.crfname=Crf Name parameter is missing
 rest.eventservice.restorecrf.empty.crfname=Crf Name parameter is empty
-rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' is not found in study event definition ''{1}''
+rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in study ''{2}''
 rest.crf.crfNameDoesNotExist=Crf with name ''{0}'' does not exist
 rest.crf.crfNameIsEmpty=Crf name is empty
 rest.importCrf.operationFailed=Failed to import new crf
