--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4129,3 +4129,12 @@ started_event_crf_found = Started event CRF found, unable to delete this Event D
 crf_was_deleted_from_event_definition = CRF {0} has been successfully deleted from event {1}.
 
 file_path_should_end_with_a_slash = File path should end with a slash.
+
+rest.usertype.valueDescription=1 -> ADMINISTRATOR, 2 -> USER
+rest.role.valueDescription=1 -> SYSTEM_ADMINISTRATOR, 2 -> STUDY_ADMINISTRATOR, 6 -> STUDY_MONITOR, 7 -> STUDY_CODER, 8 -> STUDY_EVALUATOR, 4 -> INVESTIGATOR, 5 -> CLINICAL_RESEARCH_COORDINATOR, 9 -> SITE_MONITOR
+rest.propagatechange.valueDescription=1 -> Yes, unconditionally, 2 -> Yes, but preserve different settings, 3 -> No
+rest.sourcedataverification.valueDescription=1 -> Entire CRF, 2 -> Specific Items, 3 -> Not Required
+rest.dataentryquality.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
+rest.emailwhen.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
+rest.dataentryquality.withNone.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
+rest.emailwhen.withNone.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
