Fixed #2676: Improve user experience when uploading a file. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3261 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4138,3 +4138,8 @@ rest.dataentryquality.valueDescription=dde -> Double Data Entry, evaluation -> C
 rest.emailwhen.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
 rest.dataentryquality.withNone.valueDescription=dde -> Double Data Entry, evaluation -> CRF data evaluation, none -> Option is not used
 rest.emailwhen.withNone.valueDescription=complete -> Send Email when CRF is completed, sign -> Send Email when CRF is signed, none -> Option is not used
+
+your_file_being_uploaded = Your file is being uploaded. Please wait...
+your_file = Your file
+was_successfully_uploaded = was successfully uploaded.
+will_be_saved_in_db_when_crf_is_saved = It will be saved in the database when CRF is saved.
