--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4115,6 +4115,7 @@ codeRef.CTCAE.GR.value.4=Life-threatening or Grade 4
 codeRef.CTCAE.GR.value.5=Fatal or Grade 5
 
 dataEntry.thisCrfContainsPDForTheFollowingPages=This CRF contains partial data on the following page(s)
+dataEntry.thisCrfContainsPDForSomePages=This CRF contains partial data on some page(s).
 
 propagate_change = Propagate change
 yes_unconditionally = Yes, unconditionally
