Fixed #2686: Change behaviour if Max Size exceeded. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3269 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -698,7 +698,7 @@ to_use_another_version = To use another Version Click
 
 to_use_another_version_click = (To use another version of this CRF, click on the magnifying glass.)
 
-upload_note = Please select Browse to find the file you would like to upload. After you have found the file, please select Open. You can then select the Upload File button to upload the file to the CRF. Please note, you can only add one file per item, if you upload more than one, only the last one will be saved. The previous ones will be overwritten.
+upload_note = Please click Choose File to find the file you would like to upload. After you have found the file, please click Open. You can then click on the Upload File button to upload the file to the CRF. Please note, you can only add one file per item, if you upload more than one, only the last one will be saved. The previous ones will be overwritten.
 
 uploading_not_process_because_permission = File uploading can not be processed because of permission reason.
 
