Fixed #2541: user should be allowed to setup diff sets of items to SDV for the same CRF version in diff studies. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3280 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1963,6 +1963,8 @@ section_selected = Section Selected
 
 section_title = Section Title
 
+_section = Section
+
 select = Select
 
 select_CRF_attributes = Select CRF Attributes
@@ -4130,7 +4132,16 @@ started_event_crf_found = Started event CRF found, unable to delete this Event D
 crf_was_deleted_from_event_definition = CRF {0} has been successfully deleted from event {1}.
 
 file_path_should_end_with_a_slash = File path should end with a slash.
+configure_items_for_sdv = Configure Items for SDV
+choose_crf_version_to_configure = Choose CRF version to configure
+is_shown = Is Shown
+skip_logic = Skip Logic
+sdv_required = SDV Required
+submit_and_exit = Submit & Exit
 
+item_level_sdv_status_changed = You have changed SDV status from Specific Items to Entire CRF/Not required for some of event definition CRF records. If you continue, then event CRFs that were already SDV-ed at the item level will lose their SDV-ed/Signed status and revert to the Completed status. Do you want to proceed?
+configuration_saved_successfully_please_note = Items SDV configuration was updated successfully. Please note that it will be saved only when all changes for Event Definition will be submitted.
+item_sdv_configuration_changed_save_it = Items SDV configuration was changed. Do you want to save changes?
 rest.usertype.valueDescription=1 -> ADMINISTRATOR, 2 -> USER
 rest.role.valueDescription=1 -> SYSTEM_ADMINISTRATOR, 2 -> STUDY_ADMINISTRATOR, 6 -> STUDY_MONITOR, 7 -> STUDY_CODER, 8 -> STUDY_EVALUATOR, 4 -> INVESTIGATOR, 5 -> CLINICAL_RESEARCH_COORDINATOR, 9 -> SITE_MONITOR
 rest.propagatechange.valueDescription=1 -> Yes, unconditionally, 2 -> Yes, but preserve different settings, 3 -> No
