--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2938,6 +2938,9 @@ section_selected = \u0412\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u0440
 #section_title =  Section Title
 #section_title = Заголовок раздела
 section_title = \u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a \u0440\u0430\u0437\u0434\u0435\u043b\u0430
+#_section =  Section
+#_section = Раздел
+_section = \u0420\u0430\u0437\u0434\u0435\u043b
 #select =  Select
 #select = Выбрать
 select = \u0412\u044b\u0431\u0440\u0430\u0442\u044c
