Fixed #2711: Rework API so that only users with study roles will be able to be authenticated (authentication will be allowed on study only). Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3283 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -453,6 +453,7 @@ no_permission_to_evaluate=No permission to open crf evaluation page
 itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study
 itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site
 
+rest.authentication.authenticationOnSiteIsNotPossible=Authentication on a site is not possible.
 rest.methodProducesOnlyThe=Method produces only the ''{0}''
 rest.parameterIsNotSupported=Parameter ''{0}'' is not supported
 rest.parameterShouldBeInLowercase=Parameter ''{0}'' should be in lowercase
@@ -529,7 +530,8 @@ rest.event.isNotFound=Study Event Definition with id ''{0}'' is not found
 rest.event.cannotPerformOperationOnEDCBecauseTheSEDIsNotAvailable=Cannot perform operation on Event Definition Crf because the Study Event Definition is not available
 rest.event.studyEventDefinitionDoesNotBelongToCurrentScope=Study Event Definition with id ''{0}'' does not belong to current scope
 rest.event.eventDefinitionCrfAlreadyExists=Event Definition Crf for Crf ''{0}'' already exists in study event definition ''{1}''
-rest.event.crfHasSDVRequiredItems=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
+rest.event.crfHasSDVRequiredItemsButSDVCodeIsNot2=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
+rest.event.crfDoesNotHaveSDVRequiredItemsButSDVCodeIs2=Crf with id ''{0}'' does not have SDV required items and therefore the SourceDataVerification should be specified as 1 -> Entire CRF or 3 -> Not Required
 rest.event.emailAddressIsNotValid=Email address is not valid.
 rest.event.provideEmailAddress=Please provide email address.
 rest.eventservice.addcrf.empty.defaultversion=DefaultVersion parameter is empty
@@ -542,8 +544,18 @@ rest.eventservice.editstudycrf.empty.crfname=CrfName parameter is empty
 rest.eventservice.editstudycrf.missing.crfname=CrfName parameter is missing
 rest.eventservice.editstudycrf.empty.eventid=EventId parameter is empty
 rest.eventservice.editstudycrf.missing.eventid=EventId parameter is missing
-rest.eventservice.editstudycrf.eventDefinitionCrfIsNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''
-rest.eventservice.editstudycrf.emailCanBeSpecifiedOnlyIf=Email can be specified only if parameter emailwhen is set to 'complete' or 'sign'.
+rest.eventservice.editEDC.eventDefinitionCrfIsNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''
+rest.eventservice.editEDC.emailCanBeSpecifiedOnlyIf=Email can be specified only if parameter emailwhen is set to 'complete' or 'sign'.
+rest.eventservice.editEDC.crfEvaluationIsNotAvailableFor=CRF evaluation is not available for current ''{0}''.
+rest.eventservice.editEDC.crfDoesNotHaveVersion=CRF ''{0}'' does not have version ''{1}''.
+rest.eventservice.editEDC.defaultVersionShouldBePresentInTheAvailableVersions=Default version should be present in the 'availableversions'.
+rest.eventservice.editEDC.availableVersionsIsEmpty=AvailableVersions parameter is empty.
+rest.eventservice.editsitecrf.empty.sitename=SiteName parameter is empty
+rest.eventservice.editsitecrf.missing.sitename=SiteName parameter is missing
+rest.eventservice.editsitecrf.empty.crfname=CrfName parameter is empty
+rest.eventservice.editsitecrf.missing.crfname=CrfName parameter is missing
+rest.eventservice.editsitecrf.empty.eventid=EventId parameter is empty
+rest.eventservice.editsitecrf.missing.eventid=EventId parameter is missing
 rest.createEvent.operationFailed=Failed to create Study Event Definition
 rest.addCrf.operationFailed=Failed to add Event Definition Crf
 rest.eventservice.editevent.empty.id=Id parameter is empty
@@ -572,7 +584,6 @@ rest.crfservice.importcrf.missing.jsondata=Json Data parameter is missing
 rest.crfservice.importcrf.empty.jsondata=Json Data parameter is empty
 rest.crfservice.importcrfversion.missing.jsondata=Json Data parameter is missing
 rest.crfservice.importcrfversion.empty.jsondata=Json Data parameter is empty
-
 rest.crfservice.phiIsNotValid=Item ''{0}'' has wrong phi data
 rest.crfservice.revisionNotesIsBlank=Revision notes is blank
 rest.crfservice.sectionLabelIsBlank=Section label is blank
