Refs #2711: Rework API so that only users with study roles will be able to be authenticated (authentication will be allowed on study only). Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3290 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -461,6 +461,8 @@ rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required p
 rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
 rest.authentication.userShouldBeAuthenticated=User should be authenticated
 rest.authentication.userIsNotAssignedToStudy=User is not assigned to study
+rest.authentication.onlyRootOrStudyAdministratorCanBeAuthenticated=Only root or study administrator can be authenticated.
+rest.authentication.onlyUsersWithTypeAdministratorCanBeAuthenticated=Only users with type administrator can be authenticated.
 rest.authentication.noUserFound=No user found for specified username
 rest.authentication.wrongUserNameOrPassword=Wrong username or password specified
 rest.authentication.wrongStudyName=No study found for specified study name
