Fixed #2468: Event API: DeleteCRF_Event. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3293 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -577,6 +577,10 @@ rest.eventservice.restorecrf.missing.eventid=Event Id parameter is missing
 rest.eventservice.restorecrf.empty.eventid=Event Id parameter is empty
 rest.eventservice.restorecrf.missing.crfname=Crf Name parameter is missing
 rest.eventservice.restorecrf.empty.crfname=Crf Name parameter is empty
+rest.eventservice.deletecrf.missing.eventid=Event Id parameter is missing
+rest.eventservice.deletecrf.empty.eventid=Event Id parameter is empty
+rest.eventservice.deletecrf.missing.crfname=Crf Name parameter is missing
+rest.eventservice.deletecrf.empty.crfname=Crf Name parameter is empty
 rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in study ''{2}''
 rest.crf.crfNameDoesNotExist=Crf with name ''{0}'' does not exist
 rest.crf.crfNameIsEmpty=Crf name is empty
@@ -648,6 +652,8 @@ rest.crfservice.notUniqueItemPlacementInGroups=You have tried to assign the item
 rest.crfservice.checkItem=. Check item ''{0}''
 crfShouldHaveAtLeastOneItem=The CRF should have at least one item.
 crfItemNamesShouldNotStartWith=CRF item names should not start with 'sysdvr_' or 'syslbl_'
+rules_are_present_for_crfs=The Event Definition CRF cannot be deleted because it contains CRFs with rules. Delete all the rules to proceed.
+data_is_present_for_crfs=The Event Definition CRF cannot be deleted because it contains CRFs with data. Delete all the data to proceed.
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
