Fixed #2671: Extend logging of all requests to and from randomize.net. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3300 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4155,3 +4155,13 @@ your_file_being_uploaded = Your file is being uploaded. Please wait...
 your_file = Your file
 was_successfully_uploaded = was successfully uploaded.
 will_be_saved_in_db_when_crf_is_saved = It will be saved in the database when CRF is saved.
+subject_audit = Subject Audit
+study_events_audit = Study Events Audit
+event_crfs_audit = Event CRFs Audit
+deleted_event_crfs = Deleted Event CRFs
+item_data_audit = Item Data Audit
+randomization_audit = Randomization Audit
+event_description = Event Description
+randomization.call.result.success = Subject was randomized successfully
+randomization.call.result.error = Randomization attempt failed
+stratificationVariables = Stratification Variables
