Fixed #2719: Add new role Study Sponsor to list with roles. Submitted by: igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3301 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2155,6 +2155,8 @@ study_requested = Study Requested
 
 study_site = Study/Site
 
+study_sponsor = Study Sponsor
+
 study_start_date = Study Start Date
 
 study_status_and_design = Study Status and Design
