--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
@@ -70,6 +70,7 @@ Clinical_Research_Coordinator = Clinical Research Coordinator
 study_coder = Study Coder
 study_evaluator = Study Evaluator
 site_monitor = Site Monitor
+study_sponsor = Study Sponsor
 
 MSK = MSK
 
