--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -103,6 +103,9 @@ study_evaluator = \u041e\u0446\u0435\u043d\u0449\u0438\u043a
 #site_monitor =  Site Monitor
 #site_monitor = Монитор Сайта
 site_monitor = \u041c\u043e\u043d\u0438\u0442\u043e\u0440 \u0421\u0430\u0439\u0442\u0430
+#study_sponsor = Study Sponsor
+#study_coder = Спонсор Исследования
+study_coder = \u0421\u043F\u043E\u043D\u0441\u043E\u0440 \u0418\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
 #Mother_Maiden_Name =  Mother's Maiden Name
 #Mother_Maiden_Name = Девичья фамилия матери
 Mother_Maiden_Name = \u0414\u0435\u0432\u0438\u0447\u044c\u044f \u0444\u0430\u043c\u0438\u043b\u0438\u044f \u043c\u0430\u0442\u0435\u0440\u0438
