Fixed #2728: CRF API cannot import CRFs with options that have values with commas. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3312 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -548,7 +548,7 @@ rest.eventservice.editstudycrf.empty.eventid=EventId parameter is empty
 rest.eventservice.editstudycrf.missing.eventid=EventId parameter is missing
 rest.eventservice.editEDC.eventDefinitionCrfIsNotAvailable=Event Definition Crf for Crf ''{0}'' is not available in study event definition ''{1}''
 rest.eventservice.editEDC.emailCanBeSpecifiedOnlyIf=Email can be specified only if parameter emailwhen is set to 'complete' or 'sign'.
-rest.eventservice.editEDC.crfEvaluationIsNotAvailableFor=CRF evaluation is not available for current ''{0}''.
+rest.eventservice.editEDC.crfEvaluationIsNotAvailable=CRF evaluation is not available.
 rest.eventservice.editEDC.crfDoesNotHaveVersion=CRF ''{0}'' does not have version ''{1}''.
 rest.eventservice.editEDC.defaultVersionShouldBePresentInTheAvailableVersions=Default version should be present in the 'availableversions'.
 rest.eventservice.editEDC.availableVersionsIsEmpty=AvailableVersions parameter is empty.
@@ -558,6 +558,8 @@ rest.eventservice.editsitecrf.empty.crfname=CrfName parameter is empty
 rest.eventservice.editsitecrf.missing.crfname=CrfName parameter is missing
 rest.eventservice.editsitecrf.empty.eventid=EventId parameter is empty
 rest.eventservice.editsitecrf.missing.eventid=EventId parameter is missing
+rest.eventservice.editsitecrf.siteIsNotFound=Site ''{0}'' is not found.
+rest.eventservice.editsitecrf.siteDoesNotBelongToCurrentScope=Site ''{0}'' does not belong to current scope.
 rest.createEvent.operationFailed=Failed to create Study Event Definition
 rest.addCrf.operationFailed=Failed to add Event Definition Crf
 rest.eventservice.editevent.empty.id=Id parameter is empty
@@ -581,7 +583,8 @@ rest.eventservice.deletecrf.missing.eventid=Event Id parameter is missing
 rest.eventservice.deletecrf.empty.eventid=Event Id parameter is empty
 rest.eventservice.deletecrf.missing.crfname=Crf Name parameter is missing
 rest.eventservice.deletecrf.empty.crfname=Crf Name parameter is empty
-rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in study ''{2}''
+rest.event.eventDefinitionCrfIsNotFoundInStudy=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in study ''{2}''
+rest.event.eventDefinitionCrfIsNotFoundInSite=Event Definition Crf for Crf ''{0}'' and study event definition ''{1}'' is not found in site ''{2}''
 rest.crf.crfNameDoesNotExist=Crf with name ''{0}'' does not exist
 rest.crf.crfNameIsEmpty=Crf name is empty
 rest.importCrf.operationFailed=Failed to import new crf
