Fixed #2743: Rework REST API parameters. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3323 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -455,8 +455,8 @@ itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level 
 
 rest.authentication.authenticationOnSiteIsNotPossible=Authentication on a site is not possible.
 rest.methodProducesOnlyThe=Method produces only the ''{0}''
+rest.thereIsTypoInTheParameter=There is a typo in the parameter ''{0}''.
 rest.parameterIsNotSupported=Parameter ''{0}'' is not supported
-rest.parameterShouldBeInLowercase=Parameter ''{0}'' should be in lowercase
 rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required parameter should be specified
 rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
 rest.authentication.userShouldBeAuthenticated=User should be authenticated
