Fixed #2281: We should provide an API function to allow to change the current scope. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3333 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -453,12 +453,13 @@ no_permission_to_evaluate=No permission to open crf evaluation page
 itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study
 itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site
 
-rest.authentication.authenticationOnSiteIsNotPossible=Authentication on a site is not possible.
+rest.authenticationservice.changescope.empty.studyname=Study name parameter is empty
+rest.authenticationservice.changescope.missing.studyname=Study name parameter is missing
+rest.authentication.studyMustBeStudy=The ''${0}'' is site. The scope must be a study.
 rest.methodProducesOnlyThe=Method produces only the ''{0}''
 rest.thereIsTypoInTheParameter=There is a typo in the parameter ''{0}''.
 rest.parameterIsNotSupported=Parameter ''{0}'' is not supported
 rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required parameter should be specified
-rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
 rest.authentication.userShouldBeAuthenticated=User should be authenticated
 rest.authentication.userIsNotAssignedToStudy=User is not assigned to study
 rest.authentication.onlyRootOrStudyAdministratorCanBeAuthenticated=Only root or study administrator can be authenticated.
